# arduino_r4_uno_wifi_common

./: Cargo.toml  README.md
blinky/: Cargo.toml  Embed.toml  build.rs  memory.x
blinky/src/: main.rs
ra4m1-pac/: Cargo.toml  gen_pac.sh
ra4m1-pac/src/: acmplp.rs  adc140.rs  agt0.rs  bus.rs  cac.rs  can0.rs  crc.rs  ctsu.rs  dac12.rs  dac8.rs  dbg.rs  dma.rs  dmac0.rs  doc.rs  dtc.rs  elc.rs  fcache.rs  gpt320.rs  gpt_ops.rs  icu.rs  iic0.rs  iic1.rs  iwdt.rs  kint.rs  lib.rs  mmpu.rs  mstp.rs  opamp.rs  pfs.rs  pmisc.rs  poeg.rs  port0.rs  port1.rs  rtc.rs  sci0.rs  sci2.rs  slcdc.rs  smpu.rs  spi0.rs  spmon.rs  (+6 more)
ra4m1-pac/src/acmplp/: compfir.rs  compmdr.rs  compocr.rs  compsel0.rs  compsel1.rs
ra4m1-pac/src/adc140/: adadc.rs  adads0.rs  adads1.rs  adansa0.rs  adansa1.rs  adansb0.rs  adansb1.rs  adcer.rs  adcmpanser.rs  adcmpansr0.rs  adcmpansr1.rs  adcmpbnsr.rs  adcmpbsr.rs  adcmpcr.rs  adcmpdr0.rs  adcmpdr1.rs  adcmpler.rs  adcmplr0.rs  adcmplr1.rs  adcmpser.rs  adcmpsr0.rs  adcmpsr1.rs  adcsr.rs  addbldr.rs  addbldra.rs  addbldrb.rs  addiscr.rs  addr.rs  adexicr.rs  adgspcr.rs  adhvrefcnt.rs  adocdr.rs  adrd.rs  adsstr.rs  adsstrl.rs  adsstro.rs  adsstrt.rs  adstrgr.rs  adtsdr.rs  adwinllb.rs  (+2 more)
ra4m1-pac/src/agt0/: agt.rs  agtcma.rs  agtcmb.rs  agtcmsr.rs  agtcr.rs  agtioc.rs  agtiosel.rs  agtisr.rs  agtmr1.rs  agtmr2.rs
ra4m1-pac/src/bus/: buserradd.rs  buserrstat.rs  busmcnt.rs  busscnt.rs  busscntfbu.rs  busscntfli.rs  busscntp6b.rs
ra4m1-pac/src/cac/: cacntbr.rs  cacr0.rs  cacr1.rs  cacr2.rs  caicr.rs  callvr.rs  castr.rs  caulvr.rs
(+464 files in other folders)
