[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.0.0"
ra4m1-pac = { path = "../ra4m1-pac", features = [
    "rt",
    "critical-section",
    "device",
] }
