[package]
name = "ra4m1-pac"
version = "0.1.0"
edition = "2021"

[lib]
name = "ra4m1_pac"
path = "src/lib.rs"

[dependencies]
critical-section = { version = "1.1.1", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
device = ["dep:critical-section", "cortex-m-rt/device"]
critical-section = ["dep:critical-section"]
